syntax = "proto3";

package proto;

import "transaction.proto";

message BlockHeader {
    string previousHash = 1;
    uint32 timeStamp = 2;
    uint32 nonce = 3;
    string txsMerkleHash = 4;
    uint32 height = 5;
}


message BlockData {
    BlockHeader header = 1;
    repeated TxData txDatas = 2; 
}



